--- a/puper/frontend/src/pages/HomePage.css
+++ b/puper/frontend/src/pages/HomePage.css
@@ -36,7 +36,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('/gero.gif');
+  background-image: url('/hero.gif');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
