--- a/puper/frontend/src/pages/HomePage.css
+++ b/puper/frontend/src/pages/HomePage.css
@@ -4,21 +4,15 @@
 }
 
 .hero-section {
-  position: relative; /* This is the anchor for the absolute positioned video */
-  height: 100vh; /* Make the hero section take the full height of the viewport */
+  position: relative;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
-  overflow: hidden; /* Hide any part of the video that might overflow */
-  color: white; /* Set a default text color that works over the video */
-}
-
-.gif-hero {
-  padding: 0;
-  min-height: 100vh;
   overflow: hidden;
-  position: relative;
+  color: white;
+  background: url('../../../public/hero.gif') center center / cover no-repeat;
 }
 
 .video-background {
@@ -30,17 +24,7 @@
   z-index: -1;
 }
 
-.hero-gif-background {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  z-index: -1;
-}
+
 
 .hero-content {
   position: relative; /* Ensures this content stays on top of the video */
@@ -129,11 +113,7 @@
   z-index: 2;
 }
 
-/* GIF Hero Styles */
-.gif-hero .hero-content {
-  position: relative;
-  z-index: 2;
-}
+
 
 .hero-content {
   max-width: 800px;
